// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "filter": null,
  "hasMore": true,
  "list": Array [],
  "loading": false,
  "unread": 0,
  "unreadFetchFlag": true,
}
`;

exports[`2- fetchAct 1`] = `
Object {
  "filter": null,
  "hasMore": true,
  "list": Array [],
  "loading": true,
  "unread": 0,
  "unreadFetchFlag": true,
}
`;

exports[`3- fetchedAct 1`] = `
Object {
  "filter": null,
  "hasMore": false,
  "list": Array [
    Object {
      "author": "good-karma",
      "gk": "2 hours",
      "gkf": true,
      "id": "v-705431149",
      "img_url": null,
      "permlink": "update-on-hivesigner-integration-into-condenser",
      "read": 0,
      "source": "fooo10",
      "timestamp": "2020-07-24T06:50:48+00:00",
      "title": "Update on Hivesigner integration into Condenser",
      "ts": 1595566248,
      "type": "vote",
      "voter": "fooo10",
      "weight": 10000,
    },
    Object {
      "account": "good-karma",
      "author": "ecency.stats",
      "gk": "8 hours",
      "gkf": true,
      "id": "m-49590315",
      "img_url": "https://images.ecency.com/0x0/https://img.esteem.app/08zx2x.jpg",
      "permlink": "daily-activities-points-2020-07-24",
      "post": true,
      "read": 0,
      "source": "ecency.stats",
      "timestamp": "2020-07-24T01:10:09+00:00",
      "title": "Daily activities [Points] - Jul 24",
      "ts": 1595545809,
      "type": "mention",
    },
    Object {
      "blog": true,
      "follower": "fooo10",
      "following": "good-karma",
      "gk": "2 hours",
      "gkf": true,
      "id": "f-174272007",
      "read": 0,
      "source": "fooo10",
      "timestamp": "2020-07-24T06:08:24+00:00",
      "ts": 1595563704,
      "type": "follow",
    },
    Object {
      "blog": false,
      "follower": "fooo102",
      "following": "good-karma",
      "gk": "2020-07-19",
      "gkf": false,
      "id": "f-174258147",
      "read": 1,
      "source": "fooo102",
      "timestamp": "2020-07-19T05:07:09+00:00",
      "ts": 1595128029,
      "type": "unfollow",
    },
  ],
  "loading": false,
  "unread": 0,
  "unreadFetchFlag": true,
}
`;

exports[`4- fetchedAct 1`] = `
Object {
  "filter": null,
  "hasMore": false,
  "list": Array [
    Object {
      "author": "good-karma",
      "gk": "2 hours",
      "gkf": true,
      "id": "v-705431149",
      "img_url": null,
      "permlink": "update-on-hivesigner-integration-into-condenser",
      "read": 0,
      "source": "fooo10",
      "timestamp": "2020-07-24T06:50:48+00:00",
      "title": "Update on Hivesigner integration into Condenser",
      "ts": 1595566248,
      "type": "vote",
      "voter": "fooo10",
      "weight": 10000,
    },
    Object {
      "account": "good-karma",
      "author": "ecency.stats",
      "gk": "8 hours",
      "gkf": true,
      "id": "m-49590315",
      "img_url": "https://images.ecency.com/0x0/https://img.esteem.app/08zx2x.jpg",
      "permlink": "daily-activities-points-2020-07-24",
      "post": true,
      "read": 0,
      "source": "ecency.stats",
      "timestamp": "2020-07-24T01:10:09+00:00",
      "title": "Daily activities [Points] - Jul 24",
      "ts": 1595545809,
      "type": "mention",
    },
    Object {
      "blog": true,
      "follower": "fooo10",
      "following": "good-karma",
      "gk": "2 hours",
      "gkf": true,
      "id": "f-174272007",
      "read": 0,
      "source": "fooo10",
      "timestamp": "2020-07-24T06:08:24+00:00",
      "ts": 1595563704,
      "type": "follow",
    },
    Object {
      "blog": false,
      "follower": "fooo102",
      "following": "good-karma",
      "gk": "2020-07-19",
      "gkf": false,
      "id": "f-174258147",
      "read": 1,
      "source": "fooo102",
      "timestamp": "2020-07-19T05:07:09+00:00",
      "ts": 1595128029,
      "type": "unfollow",
    },
    Object {
      "author": "dunsky",
      "body": "Testing replies from Ecency web interface 😎",
      "gk": "2020-07-21",
      "gkf": false,
      "id": "rr-108155773",
      "json_metadata": "{\\"tags\\": [\\"ecency\\"], \\"app\\": \\"ecency/0.0.1-vision\\", \\"format\\": \\"markdown+html\\"}",
      "metadata": Object {
        "app": "ecency/0.0.1-vision",
        "format": "markdown+html",
        "tags": Array [
          "ecency",
        ],
      },
      "parent_author": "good-karma",
      "parent_img_url": null,
      "parent_permlink": "re-dunsky-2020713t164324912z",
      "parent_title": null,
      "permlink": "re-good-karma-2020721t1915968z",
      "read": 1,
      "source": "dunsky",
      "timestamp": "2020-07-21T16:02:00+00:00",
      "title": "",
      "ts": 1595340120,
      "type": "reply",
    },
    Object {
      "account": "foo220",
      "author": "good-karma",
      "gk": "Yesterday",
      "gkf": true,
      "id": "r-10661404",
      "img_url": null,
      "permlink": "update-on-hivesigner-integration-into-condenser",
      "read": 0,
      "source": "foo220",
      "timestamp": "2020-07-23T13:36:06+00:00",
      "title": "Update on Hivesigner integration into Condenser",
      "ts": 1595504166,
      "type": "reblog",
    },
    Object {
      "amount": "900.000 HBD",
      "gk": "2020-07-20",
      "gkf": true,
      "id": "t-62284775",
      "memo": "",
      "read": 1,
      "source": "bar212",
      "timestamp": "2020-07-20T09:30:21+00:00",
      "to": "good-karma",
      "ts": 1595230221,
      "type": "transfer",
    },
  ],
  "loading": false,
  "unread": 0,
  "unreadFetchFlag": true,
}
`;

exports[`5- markAct 1`] = `
Object {
  "filter": null,
  "hasMore": false,
  "list": Array [
    Object {
      "author": "good-karma",
      "gk": "2 hours",
      "gkf": true,
      "id": "v-705431149",
      "img_url": null,
      "permlink": "update-on-hivesigner-integration-into-condenser",
      "read": 0,
      "source": "fooo10",
      "timestamp": "2020-07-24T06:50:48+00:00",
      "title": "Update on Hivesigner integration into Condenser",
      "ts": 1595566248,
      "type": "vote",
      "voter": "fooo10",
      "weight": 10000,
    },
    Object {
      "account": "good-karma",
      "author": "ecency.stats",
      "gk": "8 hours",
      "gkf": true,
      "id": "m-49590315",
      "img_url": "https://images.ecency.com/0x0/https://img.esteem.app/08zx2x.jpg",
      "permlink": "daily-activities-points-2020-07-24",
      "post": true,
      "read": 1,
      "source": "ecency.stats",
      "timestamp": "2020-07-24T01:10:09+00:00",
      "title": "Daily activities [Points] - Jul 24",
      "ts": 1595545809,
      "type": "mention",
    },
    Object {
      "blog": true,
      "follower": "fooo10",
      "following": "good-karma",
      "gk": "2 hours",
      "gkf": true,
      "id": "f-174272007",
      "read": 0,
      "source": "fooo10",
      "timestamp": "2020-07-24T06:08:24+00:00",
      "ts": 1595563704,
      "type": "follow",
    },
    Object {
      "blog": false,
      "follower": "fooo102",
      "following": "good-karma",
      "gk": "2020-07-19",
      "gkf": false,
      "id": "f-174258147",
      "read": 1,
      "source": "fooo102",
      "timestamp": "2020-07-19T05:07:09+00:00",
      "ts": 1595128029,
      "type": "unfollow",
    },
    Object {
      "author": "dunsky",
      "body": "Testing replies from Ecency web interface 😎",
      "gk": "2020-07-21",
      "gkf": false,
      "id": "rr-108155773",
      "json_metadata": "{\\"tags\\": [\\"ecency\\"], \\"app\\": \\"ecency/0.0.1-vision\\", \\"format\\": \\"markdown+html\\"}",
      "metadata": Object {
        "app": "ecency/0.0.1-vision",
        "format": "markdown+html",
        "tags": Array [
          "ecency",
        ],
      },
      "parent_author": "good-karma",
      "parent_img_url": null,
      "parent_permlink": "re-dunsky-2020713t164324912z",
      "parent_title": null,
      "permlink": "re-good-karma-2020721t1915968z",
      "read": 1,
      "source": "dunsky",
      "timestamp": "2020-07-21T16:02:00+00:00",
      "title": "",
      "ts": 1595340120,
      "type": "reply",
    },
    Object {
      "account": "foo220",
      "author": "good-karma",
      "gk": "Yesterday",
      "gkf": true,
      "id": "r-10661404",
      "img_url": null,
      "permlink": "update-on-hivesigner-integration-into-condenser",
      "read": 0,
      "source": "foo220",
      "timestamp": "2020-07-23T13:36:06+00:00",
      "title": "Update on Hivesigner integration into Condenser",
      "ts": 1595504166,
      "type": "reblog",
    },
    Object {
      "amount": "900.000 HBD",
      "gk": "2020-07-20",
      "gkf": true,
      "id": "t-62284775",
      "memo": "",
      "read": 1,
      "source": "bar212",
      "timestamp": "2020-07-20T09:30:21+00:00",
      "to": "good-karma",
      "ts": 1595230221,
      "type": "transfer",
    },
  ],
  "loading": false,
  "unread": 0,
  "unreadFetchFlag": true,
}
`;

exports[`6- markAct 1`] = `
Object {
  "filter": null,
  "hasMore": false,
  "list": Array [
    Object {
      "author": "good-karma",
      "gk": "2 hours",
      "gkf": true,
      "id": "v-705431149",
      "img_url": null,
      "permlink": "update-on-hivesigner-integration-into-condenser",
      "read": 1,
      "source": "fooo10",
      "timestamp": "2020-07-24T06:50:48+00:00",
      "title": "Update on Hivesigner integration into Condenser",
      "ts": 1595566248,
      "type": "vote",
      "voter": "fooo10",
      "weight": 10000,
    },
    Object {
      "account": "good-karma",
      "author": "ecency.stats",
      "gk": "8 hours",
      "gkf": true,
      "id": "m-49590315",
      "img_url": "https://images.ecency.com/0x0/https://img.esteem.app/08zx2x.jpg",
      "permlink": "daily-activities-points-2020-07-24",
      "post": true,
      "read": 1,
      "source": "ecency.stats",
      "timestamp": "2020-07-24T01:10:09+00:00",
      "title": "Daily activities [Points] - Jul 24",
      "ts": 1595545809,
      "type": "mention",
    },
    Object {
      "blog": true,
      "follower": "fooo10",
      "following": "good-karma",
      "gk": "2 hours",
      "gkf": true,
      "id": "f-174272007",
      "read": 1,
      "source": "fooo10",
      "timestamp": "2020-07-24T06:08:24+00:00",
      "ts": 1595563704,
      "type": "follow",
    },
    Object {
      "blog": false,
      "follower": "fooo102",
      "following": "good-karma",
      "gk": "2020-07-19",
      "gkf": false,
      "id": "f-174258147",
      "read": 1,
      "source": "fooo102",
      "timestamp": "2020-07-19T05:07:09+00:00",
      "ts": 1595128029,
      "type": "unfollow",
    },
    Object {
      "author": "dunsky",
      "body": "Testing replies from Ecency web interface 😎",
      "gk": "2020-07-21",
      "gkf": false,
      "id": "rr-108155773",
      "json_metadata": "{\\"tags\\": [\\"ecency\\"], \\"app\\": \\"ecency/0.0.1-vision\\", \\"format\\": \\"markdown+html\\"}",
      "metadata": Object {
        "app": "ecency/0.0.1-vision",
        "format": "markdown+html",
        "tags": Array [
          "ecency",
        ],
      },
      "parent_author": "good-karma",
      "parent_img_url": null,
      "parent_permlink": "re-dunsky-2020713t164324912z",
      "parent_title": null,
      "permlink": "re-good-karma-2020721t1915968z",
      "read": 1,
      "source": "dunsky",
      "timestamp": "2020-07-21T16:02:00+00:00",
      "title": "",
      "ts": 1595340120,
      "type": "reply",
    },
    Object {
      "account": "foo220",
      "author": "good-karma",
      "gk": "Yesterday",
      "gkf": true,
      "id": "r-10661404",
      "img_url": null,
      "permlink": "update-on-hivesigner-integration-into-condenser",
      "read": 1,
      "source": "foo220",
      "timestamp": "2020-07-23T13:36:06+00:00",
      "title": "Update on Hivesigner integration into Condenser",
      "ts": 1595504166,
      "type": "reblog",
    },
    Object {
      "amount": "900.000 HBD",
      "gk": "2020-07-20",
      "gkf": true,
      "id": "t-62284775",
      "memo": "",
      "read": 1,
      "source": "bar212",
      "timestamp": "2020-07-20T09:30:21+00:00",
      "to": "good-karma",
      "ts": 1595230221,
      "type": "transfer",
    },
  ],
  "loading": false,
  "unread": 0,
  "unreadFetchFlag": true,
}
`;

exports[`8- setFilterAct 1`] = `
Object {
  "filter": "rvotes",
  "hasMore": true,
  "list": Array [],
  "loading": false,
  "unread": 0,
  "unreadFetchFlag": true,
}
`;

exports[`9- setUnreadCountAct 1`] = `
Object {
  "filter": "rvotes",
  "hasMore": true,
  "list": Array [],
  "loading": false,
  "unread": 8,
  "unreadFetchFlag": false,
}
`;

exports[`10- logoutAct 1`] = `
Object {
  "filter": null,
  "hasMore": true,
  "list": Array [],
  "loading": false,
  "unread": 0,
  "unreadFetchFlag": true,
}
`;
